<resources>
    <string name="app_name">StuntShield</string>
    <string name="your_web_client_id">654080549977-7rc3vnrlgndhctcu2moljqu8pgq01c4p.apps.googleusercontent.com</string>
    <string name="boy">Laki-laki</string>
    <string name="girl">Perempuan</string>
    <string name="age">Usia</string>
    <string name="tv_months">Bulan</string>
    <string name="tv_years">Tahun</string>
    <string name="tv_days">Hari</string>
    <string name="tv_weight">Berat</string>
    <string name="tv_kg">Kg</string>
    <string name="tv_cm">Cm</string>
    <string name="analyze">Analisis</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_analyze">Analisis</string>
    <string name="title_profile">Profile</string>
    <string name="height">Tinggi</string>
    <string name="tv_login">Login</string>
    <string name="tv_email">Email</string>
    <string name="supporting_image">supporting_image</string>
    <string name="hint_password">Password</string>
    <string name="login_message">Silahkan login dengan akun</string>
    <string name="tv_register">Register</string>
    <string name="message2">Belum punya akun?</string>
    <string name="tv_password">Password</string>
    <string name="register_message">Lengkapi data di bawah ini</string>
    <string name="hint_username">Username</string>

    <string name="invalid_email">Format Email tidak Valid</string>
    <string name="invalid_password">Password tidak boleh kurang dari 8 karakter</string>

    <string name="login_failed_title">Login Gagal</string>
    <string name="login_success_title">Login Berhasil</string>
    <string name="register_failed_title">Register Gagal</string>
    <string name="register_success_title">Register Berhasil</string>
    <string name="login_failed_msg">Email atau password salah. Silahkan coba lagi</string>
    <string name="register_failed_msg">Email ini sudah terdaftar di akun lain</string>
    <string name="register_success_msg">Akun ada berhasil dibuat. Silahkan login</string>
    <string name="welcome_message">Welcome to</string>

    <string name="user_avatar">User Avatar</string>
    <string name="username">Username</string>
    <string name="total_analysis">Total analysis :</string>
    <string name="history_count">3 Stunting | 1 Normal</string>
    <string name="tv_rvInfo">Informasi terkait Stunting</string>
    <string name="article_title">Judul Artikel</string>
    <string name="article_preview">Preview Artikel</string>
    <string name="profile_picture">Profile Picture User</string>
    <string name="created_date">Created at </string>
    <string name="logout">Logout</string>
    <string name="edit_pict">Edit Pict</string>
    <string name="gender_boy">gender_boy</string>
    <string name="gender_girl">gender_girl</string>
    <string name="hasil_analisis">Hasil Analisis</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="result_gender">Result Gender</string>
    <string name="usia">Usia</string>
    <string name="equal">:</string>
    <string name="result_age">Result Age</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="result_height">Result Height</string>
    <string name="result_weight">Result Weight</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="tv_stunting">Index Tinggi Badan/Umur :</string>
    <string name="persentase">89%</string>
    <string name="stunting_result">Tinggi</string>
    <string name="tv_obesitas">Index Tinggi Badan/Umur :</string>
    <string name="weight_status">Berisiko Berat Badan Lebih</string>
    <string name="tv_gizi">Index Berat Badan Menurut Tinggi Badan:</string>
    <string name="gizi_status">Gizi Baik (Normal)</string>
    <string name="tv_rekomendasi">Rekomendasi</string>
    <string name="rekomendasi_konten">Recommendation here</string>
    <string name="hasil_analisis_title">Hasil Analisis</string>

</resources>